[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[build-dependencies]
lalrpop = "0.19.7"

# [build-dependencies.rust_src]
# git = "https://github.com/sondrele/rust-src.git"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
regex = "1.5.6"
koopa = "0.0.7"
paste = "1.0"
